# kigu-uart-avr

./: .gitignore  CMakeLists.txt  MANUAL.md  README.md  release.yml
.github/workflows/: main.yml
include/: avr8_model.hpp  cli_parser.hpp  model_base.hpp  uart_result.hpp
src/: avr8_model.cpp  cli_parser.cpp  main.cpp
